--- a/configs/linux/RVMAgent/Ubuntu/18.04-sudo/Ubuntu-sudo.Dockerfile.config
+++ b/configs/linux/RVMAgent/Ubuntu/18.04-sudo/Ubuntu-sudo.Dockerfile.config
@@ -1,2 +1,2 @@
-repo=https://hub.docker.com/r/jetbrains/
-teamcityAgentImage=teamcity-agent:${versionTag}-linux
+repo=https://hub.docker.com/repository/docker/sbezugliy/
+teamcityAgentImage=jetbrains/teamcity-agent:${versionTag}-linux
