--- a/configs/linux/RVMAgent/Ubuntu/18.04/Ubuntu.Dockerfile.config
+++ b/configs/linux/RVMAgent/Ubuntu/18.04/Ubuntu.Dockerfile.config
@@ -1,2 +1,2 @@
-repo=https://hub.docker.com/r/jetbrains/
-teamcityMinimalAgentImage=teamcity-minimal-agent:${versionTag}-linux
+repo=https://hub.docker.com/repository/docker/sbezugliy/
+teamcityMinimalAgentImage=jetbrains/teamcity-minimal-agent:${versionTag}-linux
