Shell replacement within /bin/bash

--- a/configs/linux.config
+++ b/configs/linux.config
@@ -1,4 +1,5 @@
 linuxPlatform=linux
+defaultShell=/bin/bash
 
 jdkLinuxComponentName=JDK <img align="center" height="18" src="/logo/corretto.png"> Amazon Corretto x64 v.8.252.09.1
 jdkLinuxMD5SUM=7e9925dbe18506ce35e226c3b4d05613
